--- a/instagram_proyecto.html
+++ b/instagram_proyecto.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="top-left">
+        <nav class="main-nav">
             <div class="nav-content">
                 <a href="#"><figure class="insta-logo">
                     <img src="/images/instalogo.png" alt="instagram-logo">
@@ -30,7 +30,6 @@
                 <li><a href="#"><svg aria-label="Feed de actividades" class="_8-yf5 " fill="#262626" height="22" viewBox="0 0 48 48" width="22"><path clip-rule="evenodd" d="M34.3 3.5C27.2 3.5 24 8.8 24 8.8s-3.2-5.3-10.3-5.3C6.4 3.5.5 9.9.5 17.8s6.1 12.4 12.2 17.8c9.2 8.2 9.8 8.9 11.3 8.9s2.1-.7 11.3-8.9c6.2-5.5 12.2-10 12.2-17.8 0-7.9-5.9-14.3-13.2-14.3zm-1 29.8c-5.4 4.8-8.3 7.5-9.3 8.1-1-.7-4.6-3.9-9.3-8.1-5.5-4.9-11.2-9-11.2-15.6 0-6.2 4.6-11.3 10.2-11.3 4.1 0 6.3 2 7.9 4.2 3.6 5.1 1.2 5.1 4.8 0 1.6-2.2 3.8-4.2 7.9-4.2 5.6 0 10.2 5.1 10.2 11.3 0 6.7-5.7 10.8-11.2 15.6z" fill-rule="evenodd"></path></svg></a></li>
 
                 <li class="user-img"><a href="#"><img src="/images/miniprf.jpg" alt="user-photo"></a></li>
-                
             </ul>
             </div>
         </nav>
@@ -257,6 +256,37 @@
             </span>
         </a>
     </section>
+
+    <footer>
+        <div class="about-container">
+            <nav class="footer-nav">
+                <ul>
+                    <li class="about"><a href="">ABOUT</a></li>
+                    <li class="about"><a href="">HELP</a></li>
+                    <li class="about"><a href="">PRESS</a></li>
+                    <li class="about"><a href="">API</a></li>
+                    <li class="about"><a href="">JOBS</a></li>
+                    <li class="about"><a href="">PRIVACITY</a></li>
+                    <li class="about"><a href="">TERMS</a></li>
+                    <li class="about"><a href="">LOCATION</a></li>
+                    <li class="about"><a href="">TOP ACCOUNTS</a></li>
+                    <li class="about"><a href="">HASHTAGS</a></li>
+                    <li class="about"><a href="">LANGUAJE</a></li>
+                </ul>
+            </nav>
+        </div>
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        <span class="copyright-container">© 2020 INSTAGRAM FROM FACEBOOK</span>
+    </footer>
   </div>
 </body>
 </html>
